# majority-vote-outlier-detection

./: .gitignore  README.md  pyproject.toml
models/: base_model.py
models/CNN/: CNN.py  CNN_v2.py  feature_extraction.py  visualisation.ipynb
models/Majority_vote/: MV  MV.py  majority_vote.ipynb
models/SOM/: SOM  SOM.py  SOM_Training.e40631217  SOM_Training.o40631217  hpc_training.py  optimization.py  predictions.ipynb  som_script.sh
models/VAE/: VAE.py  Variational_AutoEncoder.py  execute_vae.ipynb  optimizer.ipynb  predictions.ipynb
models/VAE/hpc_code/: VAE_Optimization.e30118759  VAE_Optimization.e30118989  VAE_Optimization.o30118759  VAE_Optimization.o30118989  VAE_Training.e30127145  VAE_Training.o30127145  hpc_optimization.py  hpc_training.py  install_venv.sh  install_venv.sh.e40627843  install_venv.sh.o40627843  job_script.sh  job_script_cpu.sh  optimization_job.sh  optimization_job_cpu.sh
plots_and_images/: visualize_results.ipynb
preprocessing/: tiff_handling.py
stats/: evaluate_perf_utils.py
utils/: dataloader.py  load_csv.py  load_save_models.py
