[tool.poetry]
name = "machine_learning_project"
version = "0.1.0"
description = ""
authors = ["Ben De Meurichy <48103261+Bendemeurichy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alibi = "^0.9.6"
pip = "^24.3.1"
seaborn = "^0.13.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
