[tool.poetry]
name = "machine_learning_project"
version = "0.1.0"
description = ""
authors = ["Ben De Meurichy <48103261+Bendemeurichy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip = "^24.3.1"
seaborn = "^0.13.2"
plotly = "^5.24.1"
pandas = "^2.2.3"
jupyter = "^1.1.1"
tqdm = "^4.66.6"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
optuna = "^4.0.0"
torch-tb-profiler = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
