[tool.poetry]
name = "machine_learning_project"
version = "0.1.0"
description = ""
authors = ["Ben De Meurichy <48103261+Bendemeurichy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip = "^24.3.1"
seaborn = "^0.13.2"
plotly = "^5.24.1"
pandas = "^2.2.3"
jupyter = "^1.1.1"
tqdm = "^4.66.6"
numpy = ">=1.26.0,<2.1.0"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
prompt-toolkit = "^3.0.48"
tensorflow = "^2.18.0"
optuna = "^4.0.0"
torch-tb-profiler = "^0.4.3"
tifffile = "^2024.9.20"
scikit-image = "^0.24.0"
torchvision = "^0.20.1"
pandas-stubs = "^2.2.3.241009"
torch = "^2.5.1"
tensorboard = "^2.18.0"
minisom = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
